# aust_backend_with_vision

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  AGENT_API.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  DOC_CODE_DRIFT.md  README.md  STORAGE_VARIABLES.md  audit_plan_customer_inquiry_crud.md  autoresearch.jsonl  formulas.md  refactor-plan.md
.devcontainer/: devcontainer.json  (+1 more)
crates/api/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/api/src/: error.rs  lib.rs  orchestrator.rs  state.rs  test_helpers.rs  types.rs
crates/api/src/middleware/: auth.rs  customer_auth.rs  employee_auth.rs  mod.rs  rate_limit.rs  request_id.rs  security_headers.rs
crates/api/src/repositories/: address_repo.rs  admin_repo.rs  auth_repo.rs  calendar_item_repo.rs  calendar_repo.rs  customer_address_repo.rs  customer_auth_repo.rs  customer_repo.rs  email_repo.rs  employee_repo.rs  estimation_repo.rs  feedback_repo.rs  inquiry_appointment_repo.rs  inquiry_repo.rs  invoice_reminder_repo.rs  invoice_repo.rs  mod.rs  offer_repo.rs  review_repo.rs  settings_repo.rs  storage_repo.rs  vehicle_repo.rs
crates/api/src/routes/: admin.rs  admin_customers.rs  admin_emails.rs  agent_activity.rs  auth.rs  calendar.rs  calendar_items.rs  customer.rs  distance.rs  employee.rs  estimates.rs  flash_contact.rs  health.rs  inquiries.rs  inquiry_actions.rs  inquiry_appointments.rs  invoices.rs  mod.rs  offers.rs  quotes.rs  shared.rs  storage.rs  submissions.rs  vehicles.rs
crates/api/src/services/: billing_reminder_service.rs  db.rs  email.rs  email_dispatch.rs  flash_contact_service.rs  inquiry_builder.rs  mod.rs  offer_builder.rs  offer_pipeline.rs  otp_service.rs  status_sync.rs  storage_billing_service.rs  telegram_service.rs  vehicle_reminder_service.rs  vision.rs
crates/api/src/services/assistant_bridge/: confirm_dispatcher.rs  media.rs  mod.rs  notifier_impl.rs  telegram_input.rs  telegram_output.rs
crates/api/src/services/bridge/: address_service_impl.rs  calendar_service_impl.rs  customer_service_impl.rs  email_service_impl.rs  employee_service_impl.rs  estimation_service_impl.rs  inquiry_service_impl.rs  invoice_service_impl.rs  metrics_service_impl.rs  mod.rs  offer_service_impl.rs  reminder_service_impl.rs  review_service_impl.rs  settings_service_impl.rs  todo_service_impl.rs
crates/api/tests/: e2e_submissions.rs  integration_tests.rs
crates/assistant/: AGENTS.md  Cargo.toml
crates/assistant/prompts/: SOUL.md  consolidation_nightly.md  offer_drafting.md  reflection_post_action.md  tools_preamble.md
crates/assistant/src/: audit.rs  bindings.rs  confirmation.rs  driver.rs  error.rs  lib.rs  llm.rs  retention.rs  roles.rs  session.rs  soul.rs  voice.rs
crates/assistant/src/events/: consumer.rs  handlers.rs  mod.rs  notifier.rs
crates/assistant/src/hooks/: briefing.rs  consolidate.rs  mod.rs  post_action.rs  reminders.rs
crates/assistant/src/learning/: features.rs  mod.rs  observations.rs  predict.rs
crates/assistant/src/memory/: durable.rs  episodic.rs  mod.rs  proposals.rs  retrieval.rs  session_mem.rs
crates/assistant/src/tools/: addresses.rs  calendar.rs  customers.rs  emails.rs  employees.rs  estimates.rs  inquiries.rs  invoices.rs  meta.rs  mod.rs  offers.rs  reminders.rs  reviews.rs  settings.rs  testing.rs
crates/calendar/: CLAUDE.md  Cargo.toml
crates/calendar/src/: error.rs  lib.rs  models.rs  repository.rs  service.rs
crates/core/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs
crates/core/src/events/: mod.rs
crates/core/src/models/: address.rs  customer.rs  email.rs  employee.rs  inquiry.rs  mod.rs  note.rs  offer.rs  quote.rs  snapshots.rs  user.rs  volume.rs
crates/core/src/services/: bundle.rs  error.rs  mod.rs  traits.rs
crates/distance-calculator/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/distance-calculator/examples/: test_route.rs
crates/distance-calculator/src/: error.rs  geocoder.rs  lib.rs  route.rs  router.rs
crates/email-agent/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/email-agent/examples/: fetch_one.rs  run_agent.rs  test_imap.rs  test_smtp.rs  test_telegram.rs
crates/email-agent/src/: calendar.rs  error.rs  imap_client.rs  lib.rs  parser.rs  processor.rs  responder.rs  smtp_client.rs  telegram.rs  text.rs
crates/flash-contact/: Cargo.toml
crates/flash-contact-bot/: Cargo.toml
crates/flash-contact-bot/src/: bot.rs  main.rs
crates/flash-contact/src/: lib.rs
crates/llm-providers/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/llm-providers/src/: claude.rs  error.rs  lib.rs  mock.rs  ollama.rs  openai.rs  traits.rs
crates/offer-generator/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/offer-generator/examples/: gen_math_test.rs  gen_reise.rs  preview.rs
crates/offer-generator/src/: error.rs  invoice_xlsx.rs  lib.rs  pdf.rs  pdf_convert.rs  pricing.rs  templates.rs  timesheet_xlsx.rs  travel_expense_xlsx.rs  xlsx.rs  zip_util.rs
crates/offer-generator/tests/: invoice_line_items.rs  invoice_pdf_preview.rs  pdf_preview.rs
crates/storage/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/storage/src/: error.rs  lib.rs  local.rs  s3.rs  traits.rs
crates/volume-estimator/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/volume-estimator/src/: calculator.rs  error.rs  inventory.rs  lib.rs  re_catalogue.txt  vision.rs  vision_service.rs  vlm.rs
services/vision/: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.cpu  eval_cloud_minimax-m3.txt  eval_cloud_minimax-m3.txt.meta.json  eval_cloud_qwen3-vl_235b-instruct.txt  eval_cloud_qwen3-vl_235b-instruct.txt.meta.json  modal_app.py  pyproject.toml  vlm_cloud_eval.py  vlm_ollama_eval.py
services/vision/app/: config.py  main.py
services/vision/app/api/: router.py
services/vision/app/api/endpoints/: estimate.py  health.py  video.py
services/vision/app/models/: schemas.py
services/vision/app/storage/: s3_client.py
services/vision/app/vision/: ar_pipeline.py  clip_dedup.py  depth.py  detector.py  keyframe.py  model_loader.py  pipeline.py  reconstructor.py  segmenter.py  video_pipeline.py  video_segmenter.py  vlm_dedup.py  volume.py
(+205 files in other folders)
