[package]
name = "aust_backend"
version = "0.1.0"
edition = "2021"
authors = ["AUST Team"]
license = "MIT"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AUST Team"]
license = "MIT"

[dependencies]
aust-api = { workspace = true }
aust-calendar = { workspace = true }
aust-core = { workspace = true }
aust-llm-providers = { workspace = true }
aust-storage = { workspace = true }
aust-volume-estimator = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
config = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client (for external APIs)
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
async-imap = "0.10"
tokio-native-tls = "0.3"
tokio-util = { version = "0.7", features = ["compat"] }
mail-parser = "0.9"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# S3
aws-sdk-s3 = "1"
aws-config = "1"

# UUID
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async traits
async-trait = "0.1"

# Password hashing
argon2 = "0.5"

# JWT
jsonwebtoken = "9"

# Validation
validator = { version = "0.19", features = ["derive"] }

# PDF generation
typst = "0.12"
typst-pdf = "0.12"

# Base64
base64 = "0.22"

# Bytes
bytes = "1"

# Futures utilities
futures = "0.3"

# Internal crates
aust-core = { path = "crates/core" }
aust-api = { path = "crates/api" }
aust-email-agent = { path = "crates/email-agent" }
aust-volume-estimator = { path = "crates/volume-estimator" }
aust-distance-calculator = { path = "crates/distance-calculator" }
aust-offer-generator = { path = "crates/offer-generator" }
aust-llm-providers = { path = "crates/llm-providers" }
aust-calendar = { path = "crates/calendar" }
aust-storage = { path = "crates/storage" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
