[package]
name = "aust-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aust-core = { workspace = true }
aust-llm-providers = { workspace = true }
aust-storage = { workspace = true }
aust-email-agent = { workspace = true }
aust-volume-estimator = { workspace = true }
aust-distance-calculator = { workspace = true }
aust-offer-generator = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
validator = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
lettre = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
tower = { workspace = true, features = ["util"] }
hyper = "1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = { workspace = true }
proptest = "1"
