[package]
name = "aust-calendar"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aust-core = { workspace = true }

tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
