[package]
name = "aust-email-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aust-core = { workspace = true }
aust-calendar = { workspace = true }
aust-llm-providers = { workspace = true }

tokio = { workspace = true }
lettre = { workspace = true }
async-imap = { workspace = true }
tokio-native-tls = { workspace = true }
tokio-util = { workspace = true }
mail-parser = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }

reqwest = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
