[package]
name = "aust-flash-contact"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sqlx = { workspace = true }
chrono = { workspace = true }
chrono-tz = "0.10"
uuid = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
