[package]
name = "aust-volume-estimator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aust-core = { workspace = true }
aust-llm-providers = { workspace = true }
aust-storage = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
